# qsign-translator

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  feature.md  feature_request.md
.github/workflows/: check.yml  ci.yml
data/: curated_overrides.json  sample_lexicon.json  source_registry.json
data/import_sources/slovo/: clip_ids_SLOVO.json  gloss_words_SLOVO.txt
docs/: architecture.md  current-status.md  external-node-evaluation.md  infrastructure.md  native-signer-validation.md  open-source-readiness.md  product-backlog.md  product-benchmark.md  production-runbook.md  repository-policy.md  research-synthesis.md  source-registry.md  spike-plan.md  video-backend-spike.md
experiments/: README.md
infra/db/migrations/: 001_initial.sql  002_translation_job_metadata.sql  003_feedback_events.sql  003_translation_output_contract.sql  004_publish_audit_contract.sql  005_lexicon_suggestions.sql
public/: ai-context.md  ai-use.md  claims.json  humans.txt  index.html  llms.txt  manifest.webmanifest  public-context.json  robots.txt  security.txt  sitemap.xml
public/pages/: about.html  api.html  developers.html  examples.html  faq.html  glossary.html  how-it-works.html  languages-en-asl.html  languages-kk-krsl.html  languages-ru-rsl.html  methodology.html  open-source.html  roadmap.html  safety.html  sources.html
public/static/: app.js  styles.css
scripts/: apply_migrations.py  benchmark_planner.py  bootstrap_local.sh  build_runtime_lexicon.py  check.sh  generate_seed_sql.py  inspect_mimic_assets.py  phrase_coverage_smoke.py  review_coverage_report.py  seed_db.py  smoke_live.py  source_health.py  submit_indexnow.py  validate_sql.py
src/qsign_translator/: __init__.py  ai_video_brief.py  api.py  asr.py  cli.py  dactyl.py  db.py  language.py  lexicon.py  normalize.py  planner.py  preview_video.py  risk.py  settings.py  video_plan.py
tests/: test_ai_video_brief.py  test_ai_video_brief_api.py  test_api.py  test_cli.py  test_db.py  test_language.py  test_phrase_coverage.py  test_planner.py  test_preview_video.py  test_render_plan_api.py  test_review_video_api.py
tests/fixtures/: phrase_coverage_cases.json
